@@ -14,6 +14,7 @@
 - API Addition: Desktop Sound now returns number of channels and sample rate.
 - API Addition: PointSpriteParticleBatch blending is now configurable.
 - TOOLS Features: Blending mode and sort mode can be changed in Flame particle 3D editor.
+- ObjLoader: Added material textures other than diffuse
 
 [1.9.14]
 - [BREAKING CHANGE] iOS: IOSUIViewController has been moved to its own separate class 
